--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.4",
     "@tanstack/react-query-devtools": "^5.87.4",
+    "@tanstack/react-router": "^1.131.48",
+    "@tanstack/react-router-devtools": "^1.131.48",
     "axios": "^1.12.2",
     "firebase": "^12.2.1",
     "openapi-fetch": "^0.14.0",
@@ -24,6 +26,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.131.48",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
